fix: about text align to end

--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -21,7 +21,7 @@
   justify-content: center;
   padding-left: $space-2xl;
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
 
   h1 {
     text-align: center;
